--- a/BookStore2023/BookStore2023.BL/BookStore2023.BL.csproj
+++ b/BookStore2023/BookStore2023.BL/BookStore2023.BL.csproj
@@ -7,10 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Services\" />
-  </ItemGroup>
-
-  <ItemGroup>
+    <ProjectReference Include="..\BookStore2023.DL\BookStore2023.DL.csproj" />
     <ProjectReference Include="..\BookStore2023.Models\BookStore2023.Models.csproj" />
   </ItemGroup>
 
